k8s/overlays/aws-eks/agent-runtime-deployment-base-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eve-agent-runtime
  namespace: eve
spec:
  template:
    spec:
      imagePullSecrets:
        - name: eve-registry
      containers:
        - name: agent-runtime
          image: public.ecr.aws/w7c4v0w3/eve-horizon/agent-runtime:latest
