k8s/overlays/aws-eks/api-deployment-base-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eve-api
  namespace: eve
spec:
  template:
    spec:
      imagePullSecrets:
        - name: eve-registry
      containers:
        - name: api
          image: public.ecr.aws/w7c4v0w3/eve-horizon/api:latest
          imagePullPolicy: IfNotPresent
