k8s/overlays/aws-eks/api-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eve-api
  namespace: eve
spec:
  template:
    spec:
      containers:
        - name: api
