k8s/overlays/aws-eks/dashboard-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eve-dashboard
  namespace: eve
spec:
  template:
    spec:
      imagePullSecrets:
        - name: eve-registry
      containers:
        - name: dashboard
          image: public.ecr.aws/w7c4v0w3/eve-horizon/dashboard:latest
          imagePullPolicy: IfNotPresent
