k8s/overlays/aws-eks/orchestrator-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eve-orchestrator
  namespace: eve
spec:
  template:
    spec:
      imagePullSecrets:
        - name: eve-registry
      containers:
        - name: orchestrator
          image: public.ecr.aws/w7c4v0w3/eve-horizon/orchestrator:latest
          imagePullPolicy: IfNotPresent
