k8s/overlays/aws-eks/remove-postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: eve
$patch: delete
