k8s/overlays/aws-eks/worker-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eve-worker
  namespace: eve
spec:
  template:
    spec:
      containers:
        - name: worker
