k8s/overlays/aws-eks/remove-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: eve
$patch: delete
