k8s/overlays/aws-eks/api-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eve-api
  namespace: eve
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - $patch: replace
      host: api.eve.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eve-api
                port:
                  number: 4701
